let's try this way

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,18 +37,18 @@
 
 <p>
 <p>
-<a href="/index">Homepage</a>  &nbsp;&nbsp;
-    <a href="/News">News</a>  &nbsp;&nbsp;
-    <a href="/Project">Project</a>  &nbsp;&nbsp;
-    <a href="/Download">Download</a>  &nbsp;&nbsp;
-    <a href="/Installation">Installation</a>  &nbsp;&nbsp;
-    <a href="/Developers">Developers corner</a>  &nbsp;&nbsp;
+<a href="{{ "/index" | relative_url }}">Homepage</a>  &nbsp;&nbsp;
+    <a href="{{ "/News" | relative_url }}">News</a>  &nbsp;&nbsp;
+    <a href="{{ "/Project" | relative_url }}">Project</a>  &nbsp;&nbsp;
+    <a href="{{ "/Download" | relative_url }}">Download</a>  &nbsp;&nbsp;
+    <a href="{{ "/Installation" | relative_url }}">Installation</a>  &nbsp;&nbsp;
+    <a href="{{ "/Developers" | relative_url }}">Developers corner</a>  &nbsp;&nbsp;
 <p>    
-    <a href="/Documentation">Documentation</a>  &nbsp;&nbsp;
-    <a href="/Documentation">RT-MBDyn</a>  &nbsp;&nbsp;
-    <a href="/Documentation">Contacts</a>  &nbsp;&nbsp;
-    <a href="/Mailing">Mailing Lists</a>  &nbsp;&nbsp;
-    <a href="/Team">Team</a></p>
+    <a href="{{ "/Documentation" | relative_url }}">Documentation</a>  &nbsp;&nbsp;
+    <a href="{{ "/RT-MBDyn" | relative_url }}">RT-MBDyn</a>  &nbsp;&nbsp;
+    <a href="{{ "/Contacts" | relative_url }}">Contacts</a>  &nbsp;&nbsp;
+    <a href="{{ "/Mailing" | relative_url }}">Mailing Lists</a>  &nbsp;&nbsp;
+    <a href="{{ "/Team" | relative_url }}">Team</a></p>
 
 <hr />
 
