--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
 -->
 <hr />
 
-<p>
+<p></p>
 <p>
 <a href="{{ "/index" | relative_url }}">Homepage</a>  &nbsp;&nbsp;
     <a href="{{ "/News" | relative_url }}">News</a>  &nbsp;&nbsp;
@@ -43,12 +43,14 @@
     <a href="{{ "/Download" | relative_url }}">Download</a>  &nbsp;&nbsp;
     <a href="{{ "/Installation" | relative_url }}">Installation</a>  &nbsp;&nbsp;
     <a href="{{ "/Developers" | relative_url }}">Developers corner</a>  &nbsp;&nbsp;
+</p>
 <p>    
     <a href="{{ "/Documentation" | relative_url }}">Documentation</a>  &nbsp;&nbsp;
     <a href="{{ "/RT-MBDyn" | relative_url }}">RT-MBDyn</a>  &nbsp;&nbsp;
     <a href="{{ "/Contacts" | relative_url }}">Contacts</a>  &nbsp;&nbsp;
     <a href="{{ "/Mailing" | relative_url }}">Mailing Lists</a>  &nbsp;&nbsp;
-    <a href="{{ "/Team" | relative_url }}">Team</a></p>
+    <a href="{{ "/Team" | relative_url }}">Team</a>
+</p>
 
 <hr />
 
