fixes; add tecman snapshot

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
     <a href="{{ "/Developers" | relative_url }}">Developers corner</a>  &nbsp;&nbsp;
 </p>
 <p>    
-    <a href="{{ "/Documentation" | relative_url }}">Documentation</a>  &nbsp;&nbsp;
+    <a href="{{ "/Documentation/Documentation" | relative_url }}">Documentation</a>  &nbsp;&nbsp;
     <a href="{{ "/RT-MBDyn" | relative_url }}">RT-MBDyn</a>  &nbsp;&nbsp;
     <a href="{{ "/Contacts" | relative_url }}">Contacts</a>  &nbsp;&nbsp;
     <a href="{{ "/Mailing" | relative_url }}">Mailing Lists</a>  &nbsp;&nbsp;
