--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,19 +37,19 @@
 
 <p></p>
 <p>
-<a href="{{ "/index" | relative_url }}">Homepage</a>  &nbsp;&nbsp;
-    <a href="{{ "/News" | relative_url }}">News</a>  &nbsp;&nbsp;
-    <a href="{{ "/Project" | relative_url }}">Project</a>  &nbsp;&nbsp;
-    <a href="{{ "/Download" | relative_url }}">Download</a>  &nbsp;&nbsp;
-    <a href="{{ "/Installation" | relative_url }}">Installation</a>  &nbsp;&nbsp;
-    <a href="{{ "/Developers" | relative_url }}">Developers corner</a>  &nbsp;&nbsp;
+<a href="{{ "/index.html" | relative_url }}">Homepage</a>  &nbsp;&nbsp;
+    <a href="{{ "/News.html" | relative_url }}">News</a>  &nbsp;&nbsp;
+    <a href="{{ "/Project.html" | relative_url }}">Project</a>  &nbsp;&nbsp;
+    <a href="{{ "/Download.html" | relative_url }}">Download</a>  &nbsp;&nbsp;
+    <a href="{{ "/Installation.html" | relative_url }}">Installation</a>  &nbsp;&nbsp;
+    <a href="{{ "/Developers.html" | relative_url }}">Developers corner</a>  &nbsp;&nbsp;
 </p>
 <p>    
-    <a href="{{ "/Documentation/Documentation" | relative_url }}">Documentation</a>  &nbsp;&nbsp;
-    <a href="{{ "/RT-MBDyn" | relative_url }}">RT-MBDyn</a>  &nbsp;&nbsp;
-    <a href="{{ "/Contacts" | relative_url }}">Contacts</a>  &nbsp;&nbsp;
-    <a href="{{ "/Mailing" | relative_url }}">Mailing Lists</a>  &nbsp;&nbsp;
-    <a href="{{ "/Team" | relative_url }}">Team</a>
+    <a href="{{ "/Documentation/Documentation.html" | relative_url }}">Documentation</a>  &nbsp;&nbsp;
+    <a href="{{ "/RT-MBDyn.html" | relative_url }}">RT-MBDyn</a>  &nbsp;&nbsp;
+    <a href="{{ "/Contacts.html" | relative_url }}">Contacts</a>  &nbsp;&nbsp;
+    <a href="{{ "/Mailing.html" | relative_url }}">Mailing Lists</a>  &nbsp;&nbsp;
+    <a href="{{ "/Team.html" | relative_url }}">Team</a>
 </p>
 
 <hr />
